--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "maska": "^2.1.10",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
