--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "maska": "^2.1.10",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
+    "toastify-js": "^1.12.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
